# uploadserver

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: master.yml
src/: lib.rs  main.rs
